# magic_finder

./: Cargo.toml  README.md
scripts/: magic_finder_search_with_rofi.sh  magic_finder_search_with_rofi_with_args.sh  magic_finder_update_with_rofi.sh
src/: db.rs  deser.rs  download.rs  filter_default_cards.rs  lib.rs  main.rs  mf_cli.rs  mf_rofi.rs  utils.rs
test_files/: black_lotus.json  little_girl.json  nissa.json
