[package]
name = "magic_finder"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
deunicode = "1.6.2"
dir_spec = "0.2.0"
rusqlite = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
tempfile = "3.20.0"
textdistance = "1.1.1"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
