[package]
name = "magic_finder"
version = "0.1.0"
edition = "2024"
default-run = "magic_finder_rofi"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
deunicode = "1.6.2"
dir_spec = "0.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.138"
textdistance = "1.1.1"
ureq = { version = "3.0.12", features = ["json"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }

[[bin]]
name = "magic_finder_cli"
path = "src/mf_cli.rs"

[[bin]]
name = "magic_finder_rofi"
path = "src/mf_rofi.rs"